fix : 포트폴리오 & 동문탐색 도메인 annotation 추가